--- a/main.css
+++ b/main.css
@@ -1,21 +1,13 @@
+html, body {
+    overscroll-behavior: none;
+}
+
 #svg *, .svg * {
     -moz-user-select: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -o-user-select: none;
     user-select: none;
-}
-
-#waitform {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 10000;
-    cursor: wait;
-}
-
-a {
-    color: gray;
 }
 
 em {
@@ -40,11 +32,4 @@ p {
     font-size: 80%;
     margin-top: 5px;
     margin-bottom: 0px;
-}
-
-.control_panel {
-    padding: 15px;
-    padding-bottom: 0px;
-    position: absolute;
-    z-index: 10;
 }
